# medivise

./: .dockerignore  .gitignore  Dockerfile  README.md  makefile  pyproject.toml
medivise/: __main__.py  router.py
medivise/enums/: blood_type.py  medication_type.py  strength_unit.py  weekdays.py
medivise/ingestion/: ingest-data.ipynb
medivise/models/: base_model.py  medication.py  pyobject.py  user.py
medivise/models/response_body/: base_model.py  medicine_details.py
medivise/routers/: interactions_router.py  medications_router.py  user_router.py
medivise/services/: interactions_service.py  medication_service.py  report_service.py  user_service.py
medivise/utils/: chain.py  config.py  embeddings.py  llm.py  llm_response.py  mongo_client.py  vector_store.py
