[tool.poetry]
name = "medivise"
version = "0.1.0"
description = ""
authors = ["Yesid Lopez <<yesid.leonardo.lopez@hotmail.com>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
trulens-eval = { version = "*", python = ">=3.8,<3.13" }
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pymongo = {extras = ["srv"], version = "^4.6.2"}
python-dotenv = "^1.0.1"
langchain = "^0.1.14"
pypdf = "^4.2.0"
grandalf = "^0.8"
reportlab = "^4.2.0"
llama-index = "^0.10.33"
llama-index-llms-langchain = "^0.1.3"
langchain-openai = "^0.1.6"
langchain-mongodb = "^0.1.3"
ipython = ">=8.12.0"
ipywidgets = ">=8.0.6"
ipytree = "^0.2.2"
mlflow = ">=2.9"
dbutils = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
